unpackaged/main/default/objects/GBS_Document_Link__kav/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>